@@ -34,6 +34,31 @@ If it is, e.g., six months long, the task will compute the six month global mean
         varname: 2t
         dst: "{{mondir}}/2t_oifs_global_mean_year_mean_timeseries.nc"
 
+OifsGlobalSumYearMeanTimeseries
+================================
+
+| Diagnostic Type: Time Series
+| Mapped to: ``ece.mon.oifs_global_sum_year_mean_timeseries``
+
+This processing task computes the global area integral and temporal average of an atmospheric quantity, resulting in a time series diagnostic.
+Units are automatically converted.
+
+To compute an annual mean, the leg has to be one year long.
+If it is, e.g., six months long, the task will compute the six month global mean of the input variable.
+
+**Required arguments**
+
+* ``src``: A string containing the path to the OpenIFS output file.
+* ``varname``: The name of the variable in the output file. Refer to the `ECMWF parameter database`_ for the meaning of the variables.
+* ``dst``: A string ending in ``.nc``. This is where the diagnostic will be saved.
+
+::
+
+    - ece.mon.oifs_global_sum_year_mean_timeseries:
+        src: "{{rundir}}/output/oifs/{{exp_id}}_atm_1m_1990-1990.nc"
+        varname: tcwv
+        dst: "{{mondir}}/tcwv_oifs_global_mean_year_mean_timeseries.nc"
+
 
 OifsAllMeanMap
 ==============
