@@ -1,11 +1,12 @@
-"""Tests for monitoring/oifs_global_mean_year_mean_timeseries.py"""
+"""Tests for monitoring/oifs_timeseries.py"""
 
 import iris
 import pytest
 import scriptengine.exceptions
 
-from monitoring.oifs_global_mean_year_mean_timeseries import (
+from monitoring.oifs_timeseries import (
     OifsGlobalMeanYearMeanTimeseries,
+    OifsGlobalSumYearMeanTimeseries,
 )
 
 
@@ -23,8 +24,8 @@ def test_oifs_global_mean_year_mean_timeseries_working(tmp_path):
     assert cube.attributes["comment"] is not None
     assert cube.attributes["diagnostic_type"] == "time series"
     assert cube.cell_methods == (
-        iris.coords.CellMethod("mean", coords="time", intervals="1 year"),
         iris.coords.CellMethod("mean", coords="area"),
+        iris.coords.CellMethod("mean", coords="time", intervals="1 year"),
     )
 
 
@@ -60,4 +61,24 @@ def test_oifs_global_mean_year_mean_timeseries_wrong_varname(tmp_path):
         scriptengine.exceptions.ScriptEngineTaskArgumentInvalidError,
         atmo_ts.run,
         init,
+    )
+
+
+def test_oifs_global_sum_year_mean_timeseries_working(tmp_path):
+    init = {
+        "src": ["./tests/testdata/TES1_atm_1m_1990_2t.nc"],
+        "dst": str(tmp_path / "test.nc"),
+        "varname": "2t",
+    }
+    atmo_ts = OifsGlobalSumYearMeanTimeseries(init)
+    atmo_ts.run(init)
+    cube = iris.load_cube(init["dst"])
+    assert cube.name() == "2 metre temperature"
+    assert cube.units == "K m2"
+    assert cube.attributes["title"] is not None
+    assert cube.attributes["comment"] is not None
+    assert cube.attributes["diagnostic_type"] == "time series"
+    assert cube.cell_methods == (
+        iris.coords.CellMethod("sum", coords="area"),
+        iris.coords.CellMethod("mean", coords="time", intervals="1 year"),
     )
