@@ -1,3 +1,11 @@
+Next Release
+=============
+
+Features
+---------
+- Add a new processing task OifsGlobalSumYearMeanTimeseries (PR #123)
+
+
 ScriptEngine Tasks for EC-Earth 0.9.0
 ======================================
 
